Update - note, Fix img overflow

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
   margin-bottom: 30px;
 }
 
+img {
+  width: 100%;
+}
+
 /* container_wrapper */
 .container_wrapper {
   margin: 0 auto;
